force-app/main/default/objects/blng__RefundLineCreditNoteLine__c/blng__RefundLineCreditNoteLine__c.object-meta.xml
<CustomObject>
    <label>Refund Line (Credit Note Line)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Refund Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Lines (Credit Note Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>