force-app/main/default/objects/blng__RefundLineCreditNoteLine__c/fields/blng__BaseCurrencyFXDate__c.field-meta.xml
<CustomField>
    <fullName>blng__BaseCurrencyFXDate__c</fullName>
    <label>Base Currency FX Date</label>
    <type>Date</type>
</CustomField>