force-app/main/default/objects/blng__RefundLineCreditNoteLine__c/fields/blng__CreditNoteLine__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditNoteLine__c</fullName>
    <label>Credit Note Line</label>
    <referenceTo>blng__CreditNoteLine__c</referenceTo>
    <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
    <relationshipName>RefundLinesCreditNoteLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>