force-app/main/default/objects/blng__RefundLineCreditNoteLine__c/fields/blng__Refund__c.field-meta.xml
<CustomField>
    <fullName>blng__Refund__c</fullName>
    <label>Refund</label>
    <referenceTo>blng__Refund__c</referenceTo>
    <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
    <relationshipName>RefundLinesCreditNoteLine</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>